2012-10-17  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSBundle.m:
        * Source/NSCalendarDate.m:
        * Source/NSFileManager.m:
        * Source/NSJSONSerialization.m:
        * Source/NSMessagePort.m:
        * Source/NSMessagePortNameServer.m:
        * Source/NSPropertyList.m:
        Avoid autoreleasing things in +initialize when there may be no
        autorelease pool present ... we don't want to either leak or
        cause recursive loops when we want to log any leaks.

2012-10-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Tests/base/NSArchiver/stringEncoding.m: add test for last commit

2012-10-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSPropertyList.m (-[GSBinaryPLGenerator storeString:):
	Write unicode strings in big-endian instead of little-endian.
	The resulting plists now load properly on OS X. Thanks to
	rdemet for bug report.

2012-10-15  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/Foundation/NSCharacterSet.h:
        * Source/NSCharacterSet.m:
        For a long time Apple's docs and headers said that the methods for
        returning standard charactersets returned 'NSCharacterSet*', which
        was annoying when they were called on NSMutableCharacterSet.
        It seems they finally changed to returning id, so we can do the same.

2012-10-12  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/GNUstepBase/NSDebug+GNUstepBase.h:
        Fix format of logs produced by two of the three method macros ...
        a bug spotted by Fred.

2012-10-03  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSFormat.m: for C-string formatting, avoid reading to the
        nul terminator ... limit to a number of bytes equal to the precision
        (if any) given in the format. This may be the wrong thing to do when
        handling multibyte encodings (where a natural expectation is to have
        precision mean number of characters), but seems legitimate going by